src/test/ui/span/issue-43927-non-ADT-derive.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-43927-non-ADT-derive.rs:13:1
   |
13 | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

